# image_editor

./: .gitignore  CMakeLists.txt  Makefile  all.h  command.cpp  command.h  main.cpp  stub.cpp
algo/: algo.h  interface.cpp  interface.h
algo/bmp/: Makefile  bmp.cpp  bmp.h
algo/correction/: Makefile  correction.cpp
algo/filter/: Makefile  filter.cpp
algo/interface/: interface.cpp  interface.hs
algo/matrix/: Makefile  matrix.cpp
algo/morphology/: Makefile  init.cpp  morphology.hs
algo/tiff/: Makefile  tiff.cpp  tiff.h
algo/various/: Makefile  various.cpp
algo/wavelet/: Makefile  wavelet.cpp
bitmap/: bitmap.cpp  bitmap.h  color.cpp  color.h  display.cpp  display.h
lib/: file.cpp  file.h
